--- a/doc/threads.tmpl
+++ b/doc/threads.tmpl
@@ -64,14 +64,16 @@ in "void timer_interrupt" in "timer.c":
 >> A3: What steps are taken to minimize the amount of time spent in
 >> the timer interrupt handler?
 
-by inserting a threads that should be blocked in ordered list according to their wake_up time and then we check wake_up time and current ticks if it is smaller or equal we unblock this thread and remove it from block list which help us to minimize the amount of time spent 
+by inserting a threads that should be blocked in ordered list according to their wake_up time and then we check wake_up time 
+and current ticks if it is smaller or equal we unblock this thread 
+and remove it from block list which help us to minimize the amount of time spent 
 
 ---- SYNCHRONIZATION ----
 
 >> A4: How are race conditions avoided when multiple threads call
 >> timer_sleep() simultaneously?
-We use synchronization tools like simaphores, conditions and lock 
-And we disable the interrups in during using them
+We use synchronization tools like semaphores, conditions and lock 
+And we disable the interrupts in during using them
 
 >> A5: How are race conditions avoided when a timer interrupt occurs
 >> during a call to timer_sleep()?
@@ -82,7 +84,7 @@ We disable the interrupt
 
 >> A6: Why did you choose this design?  In what ways is it superior to
 >> another design you considered?
-Because it is an effective and efficient way to avoid busy wating
+Because it is an effective and efficient way to avoid busy waiting
 
 
              PRIORITY SCHEDULING
@@ -93,6 +95,14 @@ Because it is an effective and efficient way to avoid busy wating
 >> B1: Copy here the declaration of each new or changed `struct' or
 >> `struct' member, global or static variable, `typedef', or
 >> enumeration.  Identify the purpose of each in 25 words or less.
+we added the following attributes to:
+-thread struct :
+int actual_priority;      /* Used to store thread's actual priority that is not affected with donation*/
+struct list threads_waiting;   /* Used to store threads waiting for the this struct thread in list this help us get donation for the max thread waiting priority*/
+struct thread *thread_waiting_for;  /*Used to store the thread that this thread struct is waiting which help us to donate its priority if required to the threads waiting on lock after thread they are all waiting for is released from its acquired thread*/
+struct list_elem wait_elem /*Used as a list_elem for the threads_waiting list in thread it is waiting for which help us in priority donation*/
+-semaphore_elem struct :
+struct thread*t /*It is used to store thread waiting in semaphore element*/
 
 We edited struct "thread" at "thread.h" by adding new members ""
 
@@ -100,28 +110,45 @@ We edited struct "thread" at "thread.h" by adding new members ""
 >> B2: Explain the data structure used to track priority donation.
 >> Use ASCII art to diagram a nested donation.  (Alternately, submit a
 >> .png file.)
-
+   
+     ----------------------                 ----------------------                 ----------------------                 ---------------------- 
+    |Thread A              |  waits for X  |Thread B              |  waits for Y  |Thread C              |  waits for Z  |Thread D              |
+    |actual_priority: 1    | <-------------|actual_priority: 3    | <-------------|actual_priority: 2    | <-------------|actual_priority: 7    |
+    |priority: 7           |  Lock X Holder|priority: 7           |  Lock Y Holder|priority: 7           |  Lock Z Holder|priority: 7           |
+    |threads_waiting_for:  |      is A     |threads_waiting_for: A|      is B     |threads_waiting_for: B|      is C     |threads_waiting_for: C|
+    |threads_waiting:{B}   |               |threads_waiting:{C}   |               |threads_waiting:{D}   |               |threads_waiting:{}    | 
+     ----------------------                 ----------------------                 ----------------------                 ---------------------- 
+The priority attribute for each thread is modified in each time the a new thread is waiting for lock acquired by other thread. 
+This happens when the current thread is waiting to acquire the lock it locks for the lock holder if it is available then it sees if its priority
+is larger than this thread priority if this is true it sets its priority as the current thread priority then it see if the lock holder has a thread it is waiting for 
+So to donate it the priority of the current thread if its priority is smaller than the current one then its iterates these steps on the last one lock it is waiting for.   
 ---- ALGORITHMS ----
 
 >> B3: How do you ensure that the highest priority thread waiting for
 >> a lock, semaphore, or condition variable wakes up first?
+When a new thread is inserted in waiter list in semaphore using list_insert_order() function that guarantees that the highest priority thread is the first element in the list using 
+compare_priority function as a parameter. In addition in the condition we sort them based on the semaphore_element thread member priority.
 
 >> B4: Describe the sequence of events when a call to lock_acquire()
 >> causes a priority donation.  How is nested donation handled?
-
->> B5: Describe the sequence of events when lock_release() is called
+First we check if the lock holder is null, if it is not available then there is a lock holder then we have to see if it needs priority donation by seeing if the priority for running thread waiting for the lock holder to acquire from it the lock priority is higher if it is higher we donate it the priority. Moreover, we put it in the list waiting for this thread. Finally we donate the priority of the current thread for the threads chain that the lock holder is waiting for by looping through them and checking if their priority is smaller to donate them priority through iterating through threads in the chain where the chain is thread waiting for another thread waiting for another.
+>> B5: Describe the sequence of events when lock_release() is called.
 >> on a lock that a higher-priority thread is waiting for.
+We check if the list of waiters of the semaphore that belongs to the the lock that that the threads wants to release is empty. Thus it is sure not empty as that there is higher priority thread waiting for so we remove the higher priority thread let's call it H from the waiter list as it higher priority in the waiting list. Moreover if set that the thread_waiting_for member as NULl as thread is not waiting for any thread as thread it is waiting for released the lock and we remove it from the thread that releases the lock threads_waiting list then we loop over the waiter list of the semaphore to remove the waiters from the thread releasing the lock threads_waiting list and add them thread H wing list in addition to making thread waiting for thread H instead of thread releasing and we set the priority of thread H as priority of the highest thread in its new threads_waiting list if it is bigger than its actual priority. 
 
 ---- SYNCHRONIZATION ----
 
 >> B6: Describe a potential race in thread_set_priority() and explain
 >> how your implementation avoids it.  Can you use a lock to avoid
 >> this race?
+We add attributes to the struct thread to handle synchronization tools like semaphore, conditions and locks and these attributes are threads_waiting, thread_wait_for and wait_elem and because these attributes are in the thread struct so it can not be accessed by more than 2 accesses. So It won't generate synchronization issues unless by synchronization tools for example ema_down() pushes a new thread to the waiter list. However, we could see that sema_down() calls intr_disable() to disable instruction ensuring synchronization.
 
 ---- RATIONALE ----
 
 >> B7: Why did you choose this design?  In what ways is it superior to
 >> another design you considered?
+This design is effective and efficient in addition it is easy to implement. Moreover it handles all the requirements of thread priority scheduling.
+
 
               ADVANCED SCHEDULER
               ==================
